# canonical-json

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
benches/: encoder.py
src/: error.rs  lib.rs
tests/: test_canonicalisation.py
