[package]
name = "canonical-json"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "canonical_json"
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1"
smallvec = "1"

[dependencies.pyo3]
version = "0.12"
features = ["extension-module"]

[profile.release]
codegen-units = 1
lto = "on"
